# realscript

./: .cproject  .gitignore  .project  AGENTS.md  CMakeLists.txt  Makefile  ast.c  ast.h  compiler.c  compiler.h  db.c  db.h  lexer.c  lexer.h  main.c  parser.c  parser.h  realscript  text.real  value.c  value.h  vm.c  vm.h
